# text-feature-span-extractor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
