[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-feature-span-extractor"
version = "0.1.0"
description = "Deterministic invoice extraction using native PDF text layers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pdf", "invoice", "extraction", "machine-learning", "document-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0,<2.1",
    "scipy>=1.10.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Separate annotation dependencies - doccano requires pandas<2.0
# which conflicts with main pipeline (pandas>=2.0)
# Use a separate virtual environment for annotation tasks
annotation = [
    "doccano>=1.8.0",
]

[project.scripts]
invoicex = "invoices.cli:main"
run-pipeline = "invoices.cli:main"

[project.urls]
Homepage = "https://github.com/stochastic-sisyphus/text-feature-span-extractor"
Repository = "https://github.com/stochastic-sisyphus/text-feature-span-extractor"
Issues = "https://github.com/stochastic-sisyphus/text-feature-span-extractor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"